--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ target-lexicon = "0.12.4"
 anyhow = "1.0.57"
 precision = "0.1.14"
 cap-std = "0.24.4"
+structopt = "0.3.26"
+env_logger = "0.9.0"
+log = "0.4.17"
 
 [dev-dependencies]
 criterion = "0.3.5"
